<resources>
    <string name="app_name">Family Track</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="familyID">Family Id</string>
    <string name="memberID">Member Id</string>
    <string name="join">Join</string>
    <string name="or">Or</string>
    <string name="createFamily">Create Family</string>
    <string name="memberIdHint">Enter member id</string>
    <string name="familyCreationSuccess">Your family have been successfully created!</string>
    <string name="memberCreationSuccess">Your member id have been successfully created!</string>
    <string name="familyIDtext">Family ID: </string>
    <string name="memberIDtext">Your member ID: </string>
    <string name="memberCount">Members: </string>
    <string name="okey">Okey</string>
    <string name="enterMemberId">Enter your member id</string>
    <string name="getMemberID">Get Member Id</string>
</resources>
