<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/familyIdHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toStartOf="@id/familyId"
            android:textColor="@color/textColorRegular"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:textSize="14sp"
            android:text="@string/familyID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/familyId"
            app:layout_constraintStart_toEndOf="@id/familyIdHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/familyIdHeader"
            android:textColor="@color/colorRed"
            android:textSize="14sp"
            android:text="12345"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/memberIdHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/familyId"
            android:layout_marginTop="3dp"
            app:layout_constraintEnd_toStartOf="@id/memberId"
            android:textColor="@color/textColorRegular"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:textSize="14sp"
            android:text="@string/memberIDtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/memberId"
            app:layout_constraintStart_toEndOf="@id/memberIdHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/memberIdHeader"
            android:textColor="@color/colorRed"
            android:textSize="14sp"
            android:text="12345-1"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/memberCountHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/memberIdHeader"
            android:layout_marginTop="3dp"
            app:layout_constraintEnd_toStartOf="@id/memberCount"
            android:layout_marginBottom="20dp"
            android:textColor="@color/textColorRegular"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:textSize="14sp"
            android:text="@string/memberCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/memberCount"
            app:layout_constraintStart_toEndOf="@id/memberCountHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/memberCountHeader"
            android:textColor="@color/colorRed"
            android:textSize="14sp"
            android:text="5"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>
