<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/family_created_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideStart"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".2"
            android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideEnd"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".8"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgPopupIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_family_two"
            android:layout_marginTop="20dp"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/familyIdHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgPopupIcon"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toStartOf="@id/familyId"
            android:textColor="@color/textColorRegular"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:textSize="14sp"
            android:text="@string/familyID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/familyId"
            app:layout_constraintStart_toEndOf="@id/familyIdHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/familyIdHeader"
            android:textColor="@color/colorRed"
            android:textSize="14sp"
            android:text="12345"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/memberIdHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/familyId"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@id/memberId"
            android:textColor="@color/textColorRegular"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:textSize="14sp"
            android:text="@string/memberIDtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/memberId"
            app:layout_constraintStart_toEndOf="@id/memberIdHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/memberIdHeader"
            android:textColor="@color/colorRed"
            android:textSize="14sp"
            android:text="12345-1"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/memberCountHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/memberIdHeader"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@id/memberCount"
            android:layout_marginBottom="20dp"
            android:textColor="@color/textColorRegular"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:textSize="14sp"
            android:text="@string/memberCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/memberCount"
            app:layout_constraintStart_toEndOf="@id/memberCountHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/memberCountHeader"
            android:textColor="@color/colorRed"
            android:textSize="14sp"
            android:text="5"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatButton
            android:visibility="visible"
            android:textSize="11sp"
            android:id="@+id/btnOkDialog"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@drawable/btn_black_back"
            android:text="@string/okey"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/memberCount"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp"/>







</androidx.constraintlayout.widget.ConstraintLayout>