<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/family_created_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideStart"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".2"
            android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideEnd"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".8"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgPopupIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_family_one"
            android:layout_marginTop="20dp"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtMessageDialog"
            android:gravity="center_horizontal"
            android:textSize="13sp"
            android:text="@string/familyCreationSuccess"
            android:textColor="@color/textColorRegular"
            android:layout_width="0dp"
            android:includeFontPadding="false"
            android:layout_marginTop="15dp"
            android:ems="7"
            android:lines="2"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imgPopupIcon"
            app:layout_constraintEnd_toEndOf="@id/guideEnd"
            app:layout_constraintStart_toStartOf="@id/guideStart"
    />

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtSuccessHeader"
            android:gravity="center_horizontal"
            android:textSize="13sp"
            android:text="@string/familyCreationSuccess"
            android:textColor="@color/textColorRegular"
            android:layout_width="wrap_content"
            android:includeFontPadding="false"
            android:layout_marginTop="8dp"
            tools:text="@string/familyIDtext"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtMessageDialog"
            app:layout_constraintEnd_toStartOf="@id/txtSuccessContent"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtSuccessContent"
            android:gravity="center_horizontal"
            android:textSize="13sp"
            android:text="@string/familyCreationSuccess"
            android:textColor="@color/colorRed"
            android:layout_width="wrap_content"
            android:includeFontPadding="false"
            android:layout_marginStart="3dp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="12345"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/txtSuccessHeader"
            app:layout_constraintStart_toEndOf="@id/txtSuccessHeader"/>


    <androidx.appcompat.widget.AppCompatButton
            android:visibility="visible"
            android:textSize="11sp"
            android:id="@+id/btnOkDialog"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@drawable/btn_black_back"
            android:text="@string/okey"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/txtSuccessContent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>